--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "autoload": {
         "psr-4": {
             "Greenlight\\": "src/"
-        }
+        },
+        "files": ["src/expect.php"]
     },
     "require": {}
 }
